k3s-aws/manifests/nginx/nginx_ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
spec:
  tls:
  - hosts:
      - nginx.CHANGEME_MYDOMAIN
    secretName: nginx-example-tls-secret
  rules:
  - host: nginx.CHANGEME_MYDOMAIN
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx
            port:
              number: 80
